[package]
name = "iso_11649"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Markus Kolb"]
edition = "2021"
rust-version = "1.56"
description = "Implementation of ISO-11649 Financial services - Structured creditor reference to remittance information"
documentation = "https://docs.rs/iso_11649"
homepage = "https://github.com/kolbma/iso_11649"
repository = "https://github.com/kolbma/iso_11649"
keywords = ["iso11649", "bank", "financial", "creditor", "reference", "payment"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# minimum supported rust version 1.56.0 because of edition 2021
msrv = "1.56.0"

[package.metadata.docs.rs]
all-features = true # get api doc for all features on https://docs.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
